Création et gestion des rôles + accueil + lien et navbar

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,10 @@ user:
     prefix:   /
 
 app:
+    resource: "@AppBundle/Resources/config/routing.yml"
+    prefix:   /
+    
+app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
