--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,8 +78,9 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_ADMIN: ROLE_ADMIN,ROLE_USER
+        ROLE_USER: ROLE_USER
+        ROLE_FAST_RELAIS: ROLE_USER,ROLE_FAST_RELAIS
 
     providers:
         fos_userbundle:
@@ -102,3 +103,5 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/FRU/, role: ROLE_FAST_RELAIS }
+        - { path: ^/user/, role: ROLE_USER }
